# os1

./: CMakeLists.txt
include/: os.h
src/: child1.cpp  child2.cpp  parent.cpp  prime.cpp
